chore: Add dependencies

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "clsx": "^2.1.0",
+    "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
