--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.28",
     "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-feather": "^2.0.10",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
