--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@vercel/analytics": "^1.2.2",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.28",
+    "grapheme-splitter": "^1.0.4",
     "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
