--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@types/js-cookie": "^3.0.6",
     "@vercel/analytics": "^1.2.2",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.0.28",
     "grapheme-splitter": "^1.0.4",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.445.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
