--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "prettier": "3.2.5",
+    "prettier-plugin-classnames": "^0.7.3",
+    "prettier-plugin-merge": "^0.7.1",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.3.0",
