--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -24,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
+    "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
