--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-syntax-highlighter": "^15.6.1",
     "react-type-animation": "^3.2.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
